openshift/minio/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: minio
  namespace: train-detection
  labels:
    app: minio
spec:
  type: ClusterIP
  ports:
    - name: api
      port: 9000
      targetPort: 9000
      protocol: TCP
    - name: console
      port: 9001
      targetPort: 9001
      protocol: TCP
  selector:
    app: minio
