openshift/minio/route-api.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: minio-api
  namespace: train-detection
  labels:
    app: minio
spec:
  to:
    kind: Service
    name: minio
    weight: 100
  port:
    targetPort: api
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
